# iroha

./: CMakeLists.txt  Jenkinsfile  previous-commit.groovy
.jenkinsci/: bindings.groovy  build-coverage.groovy  choose-platform.groovy  debug-build.groovy  docker-cleanup.groovy  docker-pull-or-build.groovy  enums.groovy  github-api.groovy  linux-post-step.groovy  mac-debug-build.groovy  mac-release-build.groovy  notifications.groovy  pre-build.groovy  release-build.groovy  selected-branches-coverage.groovy  test-launcher.groovy
.jenkinsci/python_bindings/: build_templates.py
cmake/: functions.cmake
cmake/Modules/: Findgrpc.cmake
docker/develop/: Dockerfile
example/java/: build_library.sh
example/python/: blocks-query.py
iroha-cli/: CMakeLists.txt
iroha-cli/model/: CMakeLists.txt
irohad/: CMakeLists.txt
irohad/ametsuchi/: CMakeLists.txt  block_query.hpp  key_value_storage.hpp  mutable_storage.hpp  storage.hpp  temporary_wsv.hpp  wsv_command.hpp
irohad/execution/: command_executor.hpp
irohad/main/: application.cpp  application.hpp  irohad.cpp
irohad/network/: consensus_cache.hpp  consensus_gate.hpp
irohad/ordering/: CMakeLists.txt  on_demand_ordering_service.hpp  on_demand_os_transport.hpp
irohad/synchronizer/: CMakeLists.txt
irohad/torii/: query_client.cpp  query_client.hpp
irohad/validation/: stateful_validator.hpp
python_bindings/files/: __init__.py
scripts/: local-develop.sh
shared_model/bindings/: bindings.i  model_crypto.cpp
test/benchmark/: CMakeLists.txt  benchmark_db.cpp  otlv4.h  pipeline_benchmark.cpp
(+134 files in other folders)
