# directory contains benchmarks

# default benchmark path is build/benchmark_bin
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/benchmark_bin)


add_executable(benchmark_example
    benchmark_example.cpp
    )
target_link_libraries(benchmark_example
    benchmark
    )

add_executable(pipeline_benchmark
        pipeline_benchmark.cpp)

target_link_libraries(pipeline_benchmark
        benchmark
        application
        raw_block_loader
        integration_framework
        shared_model_stateless_validation
    )
